[gd_scene load_steps=5 format=3 uid="uid://2nqrxwumdvik"]

[ext_resource type="Script" path="res://Scripts/enemyspawner.gd" id="1_24oef"]
[ext_resource type="AudioStream" uid="uid://dtmt3uwx38pia" path="res://Assets/Sounds/soil and dirt debris heavy 13.wav" id="4_8qkfv"]
[ext_resource type="AudioStream" uid="uid://ma87ix3wxexx" path="res://Assets/Sounds/slimejump-6913.mp3" id="5_w72mp"]
[ext_resource type="AudioStream" uid="uid://w7gofjswwva3" path="res://Assets/Sounds/bat_01.mp3" id="6_rb11t"]

[node name="EnemySpawner" type="Node3D"]
script = ExtResource("1_24oef")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="RestTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CheckTimer" type="Timer" parent="."]

[node name="Positions" type="Node3D" parent="."]

[node name="Position1" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0.75, 0)

[node name="Position2" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0.75, -5)

[node name="Position3" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.75, -10)

[node name="Position4" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.00336, 0.749999, -12.9427)

[node name="Position5" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -14)

[node name="Position6" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.75, -13)

[node name="Position7" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.75, -10)

[node name="Position8" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0.75, -5)

[node name="Position9" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0.75, 0)

[node name="Position10" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0.75, 5)

[node name="Position11" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.75, 10)

[node name="Position12" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.75, 13)

[node name="Position13" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 14)

[node name="Position14" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.75, 13)

[node name="Position15" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0.75, 10)

[node name="Position16" type="Marker3D" parent="Positions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0.75, 5)

[node name="SoundEffects" type="Node3D" parent="."]

[node name="SnailDeath" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("5_w72mp")

[node name="BatDeath" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("6_rb11t")
volume_db = -3.0

[node name="HandDeath" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource("4_8qkfv")
volume_db = -10.0

[node name="EnemyProjectiles" type="Node3D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_rest_timer_timeout"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_check_timer_timeout"]
